name:                reflex-dom-datepicker
version:             0.0.1.0
synopsis:            A date picker UI widget for the reflex FRP platform.
-- description:         
license:             BSD3
license-file:        LICENCE
author:              QFPL @ Data61
maintainer:          sean.chalmers@data61.csiro.au
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            FRP,Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.Widget.Input.Datepicker
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , text >= 1.2 && < 1.3
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
                     , lens
                     , jsaddle
                     , ghcjs-dom
                     , containers == 0.5.*
                     , time == 1.6.*

  hs-source-dirs:      src
  default-language:    Haskell2010
