name:                reflex-dom-datepicker
version:             0.0.3
synopsis:            A date picker UI widget for the reflex FRP platform.
description:         A date picker widget to be used with the Reflex FRP system, either for GHC/GHCJS. Example expects GHCJS.
license:             BSD3
license-file:        LICENCE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            FRP,Web
build-type:          Simple
cabal-version:       >=1.10

source-repository   head
  type:             git
  location:         git@github.com/qfpl/reflex-dom/reflex-dom-datepicker.git

library
  ghc-options:       -Wall -fwarn-tabs -funbox-strict-fields

  exposed-modules:     Reflex.Dom.Widget.Input.Datepicker
                     , Reflex.Dom.Widget.Input.Datepicker.Style
                     , Reflex.Dom.Widget.Input.Datepicker.Core
                     , Reflex.Dom.Widget.Input.Datepicker.Controls
                     , Reflex.Dom.Widget.Input.Datepicker.DaySelect
                     , Reflex.Dom.Widget.Input.Datepicker.Types
                     , Reflex.Dom.Widget.Basic.SelectViews

  build-depends:       base >=4.9 && <4.10
                     , text >= 1.2 && < 1.3
                     , reflex >= 0.5 && < 0.6
                     , reflex-dom >= 0.4 && < 0.5
                     , ghcjs-dom
                     , lens
                     , containers == 0.5.*
                     , time == 1.6.*

  hs-source-dirs:      src
  default-language:    Haskell2010